test/bad/automatic/extension/class/compile_time/0020.lat
class andrzej {
  int andrzej;

  void self() {
    int a = 20;
  }
}

int main() {
  andrzej janusz = new andrzej;
  return janusz.andrzej;
}
